--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,3 +1,20 @@
+
+@keyframes crawl {
+  0% {
+    /* The element starts below the screen */
+    top: 0;
+    /* Rotate the text 20 degrees but keep it close to the viewer */
+    transform: rotateX(20deg) translateZ(0);
+  }
+  100% {
+    /* This is a magic number, but using a big one to make sure the text is fully off the screen at the end */
+    top: -1500px;
+    /* Slightly increasing the rotation at the end and moving the text far away from the viewer */
+    transform: rotateX(25deg) translateZ(-2500px);
+
+  }
+}
+
 .App {
   text-align: center;
 }
@@ -44,4 +61,72 @@
   cursor: pointer;
   padding: 5px 10px;
   margin-right: 2px;
+}
+
+.sw-logo {
+  background-image: url(./swl.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 95%;
+  height: 302px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.page-content {
+  border: 1px solid #fdc739;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 500px;
+  height: 700px;
+  background-color: #222;
+  position: relative;
+  box-shadow: 7px 5px 50px 9px #222;
+  margin-bottom: 20px;
+  margin-top: 40px;
+
+}
+
+.movie-title {
+  font-family: serif;
+  color: #fff;
+  font-size: 35px;
+  font-weight: 800;
+  text-shadow: white;
+  text-shadow: 0px 0px #fff;
+  padding: 20px 20px;
+  text-transform: uppercase;
+}
+
+.movie-data {
+  padding: 20px;
+  color: #fdc739;
+  font-family: sans-serif;
+  font-size: 18px;
+  position: relative;
+  top: -20px;
+  transform-origin: 50% 100%;
+  animation: crawl 60s linear;
+}
+
+.movie-data-bottom {
+  position: absolute;
+  bottom: 10px;
+  display: block;
+  width: 100%;
+  color: #fff;
+}
+
+.movie-data-empty {
+  margin-top: 100px;
+  background-image: url(./jd.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 95%;
+  height: 302px;
+  margin-left: auto;
+  margin-right: auto;
 }
