--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,11 +1,9 @@
-
 @keyframes crawl {
   0% {
     /* The element starts below the screen */
     top: 0;
     /* Rotate the text 20 degrees but keep it close to the viewer */
     transform: rotateX(20deg) translateZ(0);
-
   }
   100% {
     /* This is a magic number, but using a big one to make sure the text is fully off the screen at the end */
@@ -13,7 +11,6 @@
     /* Slightly increasing the rotation at the end and moving the text far away from the viewer */
     transform: rotateX(25deg) translateZ(-2500px);
     transform: perspective(300px) rotateX(20deg);
-
   }
 }
 
@@ -38,8 +35,12 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 .nav-bar {
@@ -50,13 +51,13 @@
   margin-right: auto;
 }
 
-.nav-bar > ul  {
+.nav-bar > ul {
   padding: 0px;
   margin: 0px;
   list-style: none;
 }
 
-.nav-bar li  {
+.nav-bar li {
   display: inline-block;
   background: #222;
   color: #fff;
@@ -88,7 +89,6 @@
   box-shadow: 7px 5px 50px 9px #222;
   margin-bottom: 20px;
   margin-top: 40px;
-
 }
 
 .movie-title {
@@ -108,7 +108,7 @@
   font-family: sans-serif;
   font-size: 18px;
   overflow: hidden;
-  transform:perspective(300px) rotateX(20deg);
+  transform: perspective(300px) rotateX(20deg);
 }
 
 .animation {
@@ -152,18 +152,33 @@
 
 .video-payer-holder {
   background-color: #000;
-  opacity: 0.9;
   position: fixed;
   top: 0px;
   left: 0px;
   right: 0px;
   bottom: 0px;
-  padding-top: 30%;
-
+  padding-top: 10%;
 }
 
 .embed-responsive-item {
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+}
+
+.video-close {
+  font-size: 32px;
+  color: #fff;
+  position: absolute;
+  right: -32px;
+  top: -40px;
+  cursor: pointer;
+}
+
+.holder-position {
+  margin: auto;
+  height: 70%;
   width: 70%;
-  height: 60%;
-  background: #000;
+  position: relative;
+  background-color: #000;
 }
