--- a/src/style/App.css
+++ b/src/style/App.css
@@ -20,14 +20,17 @@
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  height: 40px;
 }
 
 .App-header {
   background-color: #222;
-  height: 150px;
-  padding: 20px;
+  height: 40px;
+  padding: 10px;
   color: white;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .App-intro {
